--- a/Backend/MasterFind/Services/Services.csproj
+++ b/Backend/MasterFind/Services/Services.csproj
@@ -14,6 +14,9 @@
     <Folder Include="Auth\Dtos\" />
     <Folder Include="Extensions\" />
   </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.22" />
