--- a/Backend/MasterFind/WebApi/appsettings.json
+++ b/Backend/MasterFind/WebApi/appsettings.json
@@ -1,17 +1,19 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-
-    "JWT": {
-        "Secret": "s6a&)v4i-&zaudkq&3r93b#1$q&7u(n-5+@g2k1lqcy%*5d@o=",
-        "ValidIssuer": "https://localhost:7241",
-        "ValidAudience": "https://localhost:7241",
-        "ExpireMinutes": 60
-
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=MasterFindingDb.db;"
+  },
+  "JWT": {
+    "Secret": "s6a&)v4i-&zaudkq&3r93b#1$q&7u(n-5+@g2k1lqcy%*5d@o=",
+    "ValidIssuer": "https://localhost:7054",
+    "ValidAudience": "https://localhost:7054",
+    "ExpireMinutes": 60
+
+  }
 }
