--- a/Backend/MasterFind/WebApi/WebApi.csproj
+++ b/Backend/MasterFind/WebApi/WebApi.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Repositories\Repositories.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+  </ItemGroup>
+
 </Project>
