--- a/Frontend/MasterFindUI/package.json
+++ b/Frontend/MasterFindUI/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "react": "^19.1.1",
+    "react-avatar-editor": "^14.0.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.1"
   },
