--- a/Backend/MasterFind/WebApi/WebApi.csproj
+++ b/Backend/MasterFind/WebApi/WebApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f2de0a98-1e70-475d-a08e-3c45a4d2837c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
